--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.16.0",
     "uuid": "^11.0.5"
   },
